初级版-完成版

--- a/SAMS/SAMS/SAMS.vcxproj
+++ b/SAMS/SAMS/SAMS.vcxproj
@@ -120,12 +120,15 @@
   <ItemGroup>
     <ClInclude Include="Class.h" />
     <ClInclude Include="Course.h" />
+    <ClInclude Include="function.h" />
     <ClInclude Include="Student.h" />
     <ClInclude Include="Teacher.h" />
     <ClInclude Include="List.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Class.cpp" />
     <ClCompile Include="Course.cpp" />
+    <ClCompile Include="function.cpp" />
     <ClCompile Include="List.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Student.cpp" />
