--- a/SAMS/SAMS/SAMS.vcxproj
+++ b/SAMS/SAMS/SAMS.vcxproj
@@ -134,6 +134,9 @@
     <ClCompile Include="Student.cpp" />
     <ClCompile Include="Teacher.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="document.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
