--- a/SAMS/SAMS/SAMS.vcxproj.filters
+++ b/SAMS/SAMS/SAMS.vcxproj.filters
@@ -57,4 +57,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="document.txt">
+      <Filter>资源文件</Filter>
+    </Text>
+  </ItemGroup>
 </Project>
